--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,6 @@
   color-scheme: light dark;
   background-color: white;
   color: black;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -16,5 +15,9 @@
 .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
   padding: 0;
   height: 100%;
+}
+#root {
+  min-width: 100%;
+
 }
 
